# SLM-HindiLanguage

./: .env.example  .gitignore  CLAUDE.md  CORPUS_HANDOFF.md  DevelopmentPlan.md  Makefile  TOKENIZER_HANDOFF.md  development_best_practices.md  laptop_profile.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: export_config.yaml  ingestion_config.yaml  pdf_extraction_config.yaml
data_ingestion/: CLAUDE.md  DevelopmentPlan.md  Makefile  Step  action-items.md  pyproject.toml  requirements.txt  run_pipeline.bat  run_pipeline.sh  run_tests.bat  (+3 more)
tokenizer_training/: .env.example  .gitignore  CLAUDE.md  DevelopmentPlan.md  Makefile  TRAINING_GUIDE.md  action_items.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.bat  run_pipeline.sh  run_tests.bat  run_tests.sh
tokenizer_training/configs/: publish_config.yaml  tokenizer_training_config.yaml  tokenizer_validation_config.yaml
tokenizer_training/src/hindi_tokenizer/config/: settings.py
tokenizer_training/src/hindi_tokenizer/corpus/: corpus_sampler.py  parquet_reader.py
tokenizer_training/src/hindi_tokenizer/observability/: file_registry.py  run_logger.py
tokenizer_training/src/hindi_tokenizer/orchestration/: run_tokenizer.py
tokenizer_training/src/hindi_tokenizer/packaging/: artifact_packager.py  checksum_generator.py
tokenizer_training/src/hindi_tokenizer/publishing/: tokenizer_publisher.py
tokenizer_training/src/hindi_tokenizer/schema/: records.py
tokenizer_training/src/hindi_tokenizer/sdk/: decode.py  encode.py  loader.py
tokenizer_training/src/hindi_tokenizer/training/: experiment_runner.py  tokenizer_trainer.py
tokenizer_training/src/hindi_tokenizer/ui/: progress.py
tokenizer_training/src/hindi_tokenizer/validation/: tokenizer_comparator.py  tokenizer_validator.py
tokenizer_training/tests/: conftest.py
tokenizer_training/tests/fixtures/: validation_sentences.txt
tokenizer_training/tests/fixtures/sample_configs/: test_tokenizer_training_config.yaml
tokenizer_training/tests/fixtures/sample_parquet/: sample_01.parquet  sample_02.parquet
tokenizer_training/tests/fixtures/sample_text/: small_corpus.txt
tokenizer_training/tests/integration/: test_corpus_pipeline.py  test_full_pipeline.py  test_training_pipeline.py
tokenizer_training/tests/unit/: test_artifact_packager.py  test_checksum_generator.py  test_corpus_sampler.py  test_experiment_runner.py  test_file_registry.py  test_parquet_reader.py  test_records.py  test_run_logger.py  test_run_tokenizer.py  test_sdk_decode.py  test_sdk_encode.py  test_sdk_loader.py  test_settings.py  test_tokenizer_comparator.py  test_tokenizer_publisher.py  test_tokenizer_trainer.py  test_tokenizer_validator.py
(+91 files in other folders)
