[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hindi-tokenizer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tokenizers>=0.19",
    "transformers>=4.40",
    "huggingface_hub>=0.22",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.scripts]
hindi-tokenizer = "hindi_tokenizer.orchestration.run_tokenizer:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hindi_tokenizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "requires_hf_hub: tests that need real HuggingFace Hub access (skip by default)",
]
addopts = "-v"

[tool.coverage.run]
source = ["hindi_tokenizer"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLC"]
ignore = ["E501"]
